<resources>
    <string name="app_name">GroupNumber8_DecisionBasedGame</string>
    <string name="description">something</string>
    <string name="start">START</string>
    <string name="default_Button">Choice 1</string>
    <string name="default_Button2">Choice 2</string>
    <string name="default_Button3">Choice 3</string>
    <string name="default_Button4">Choice 4</string>
    <string name="default_Button5">>Continue</string>
    <string name="default_txtView">Name</string>
    <string name="default_txtView2">She looks up at you curiously and pauses. She\'s not sure if she should
            tell; she\'s much more worried about you snitching on her to her mother.
        You know she reads late into the night. At home you can see the lights from the houses.
            Her room is lit dimly with a candle that flickers from the cold wind.
</string>
    <string-array name="default_scenario">
        //Scenario Prompt
        <item>Scenario</item>
        //Choices
        <item>Choice 1</item>
        <item>Choice 2</item>
        <item>Choice 3</item>
        <item>Choice 4</item>
        //Extra
        <item>>Continue</item>
        //character name
        <item>Name</item>
        //character image
        <item>character_img</item>
        //background image
        <item>background_img</item>
        //Extra scenario
        <item>Scenario</item>
        //Choice 4 scenario
        <item>Scenario</item>
        //Choice 3 scenario
        <item>Scenario</item>
        //Choice 2 scenario
        <item>Scenario</item>
        //Choice 1 scenario
        <item>Scenario</item>
    </string-array>
    <string-array name="Scenario_0">
        <item><![CDATA[<p>&nbsp;</p>
<p>The dark sky looms far above, framed by tall red sentinels swathed in layers of rust.&nbsp;</p>
<p>&nbsp;</p>
<p>Rain patters against your cheeks.</p>
<p>&nbsp;</p>]]></item>
        <item>>Continue</item>
        <item>bg_start</item>
        <item>Scenario_0_0_1</item>
    </string-array>
    <string-array name="Scenario_0_0_1">
        <item><![CDATA[<p>&nbsp;</p>
        <p>You are alone.</p>]]></item>
        <item>[Are you alive?]</item>
        <item>[Touch your neck]</item>
        <item>[Move your hand]</item>
        <item>[Stand up]</item>
        <item>[Return]</item>
        <item>bg_start</item>
        <item>Scenario_0</item>
        <item>Scenario_0_0_1_4</item>
        <item>Scenario_0_0_1_3</item>
        <item>Scenario_0_0_1_2</item>
        <item>Scenario_0_0_1_1</item>
    </string-array>
    <string-array name="Scenario_0_0_1_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>You lay on the ground, body swimming in liquids that smell of booze and canal water. It fills your nostrils with a disgusting sense of dread and familiarity.&nbsp;The odor makes you cringe.</p>
<p>&nbsp;</p>
<p>You are alive.<strong><br /></strong></p>
<p>&nbsp;</p>]]></item>
        <item>[Return]</item>
        <item>bg_start</item>
        <item>Scenario_0_0_1</item>
    </string-array>
    <string-array name="Scenario_0_0_1_2">
        <item><![CDATA[<p>&nbsp;</p>
<p>Your fingers flutter against your pulse. It is empty, the familiar weight a phantom against your skin.</p>
<p>&nbsp;</p>
<p>Your ring is gone.</p>
<p>&nbsp;</p>]]></item>
        <item>[Return]</item>
        <item>bg_start</item>
        <item>Scenario_0_0_1</item>
    </string-array>
    <string-array name="Scenario_0_0_1_3">
        <item><![CDATA[<p>&nbsp;</p>
<p>You try to move your hand. Pain shoots up your arm and you grit your teeth.&nbsp;After a moment, you continue.&nbsp;You raise your hand to your face and it comes back clear.</p>
<p>&nbsp;</p>
<p>No blood.</p>
<p>&nbsp;</p>]]></item>
        <item>[Return]</item>
        <item>bg_start</item>
        <item>Scenario_0_0_1</item>
    </string-array>
    <string-array name="Scenario_0_0_1_4">
        <item><![CDATA[<p>&nbsp;</p>
<p>You lift yourself up from the ground, elbows propping up against the cold wet floor. Your legs are unsteady as you rise to your feet.&nbsp;A pool of water mirrors your reflection.</p>
<p>&nbsp;</p>
<p><strong>You look pathetic.</strong></p>
<p>&nbsp;</p>]]></item>
        <item>>Continue</item>
        <item>bg_start</item>
        <item>Scenario_0_1</item>
    </string-array>
    <string-array name="Scenario_0_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>The wind whips against your face.&nbsp;</p>]]></item>
        <item>>Continue</item>
        <item>mc</item>
        <item>bg_start</item>
        <item>Scenario_0_1_1</item>
    </string-array>
    <string-array name="Scenario_0_1_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>Your ring is gone.</p>
<p>&nbsp;</p>
<p><strong><u>Look for it.</u></strong></p>
<p>&nbsp;</p>]]></item>
        <item>[Search the pier]</item>
        <item>[Search the harbor]</item>
        <item>[Search the houses]</item>
        <item>[Search the coast]</item>
        <item>""</item>
        <item>bg_start</item>
        <item>Scenario_0_1_1</item>
        <item>Scenario_4</item>
        <item>Scenario_3</item>
        <item>Scenario_2</item>
        <item>Scenario_1</item>
        <item>""</item>
    </string-array>
    <string-array name="Scenario_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>You walk to the pier, concrete pavement making way to brittle wood.
Before you, a man stands in his toll booth, gloved hands busy with
counting the meager coins scattered across the counter. Business is slow.</p>]]></item>
        <item>>Continue</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_0_1</item>
    </string-array>
    <string-array name="Scenario_1_0_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>Birds fly overhead.</p>
<p>&nbsp;</p>
<p>The island in the distance feels so far away.</p>]]></item>
        <item>[Look at the sky]</item>
        <item>[Search the bench]</item>
        <item>[Search the floor]</item>
        <item>[Approach the toll booth]</item>
        <item>[Return]</item>
        <item>pier</item>
        <item>Scenario_0_1_1</item>
        <item>Scenario_1_4</item>
        <item>Scenario_1_3</item>
        <item>Scenario_1_2</item>
        <item>Scenario_1_1</item>
    </string-array>
    <string-array name="Scenario_1_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>\"It\'s raining. Why are you looking at the sky?\"</p>
<p>\"Do you think a bird swallowed your ring? Idiot.\"</p>]]></item>
        <item>[Return]</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_0_1</item>
    </string-array>
    <string-array name="Scenario_1_2">
        <item><![CDATA[<p>&nbsp;</p>
<p>You turn your gaze to the bench settled beside the pier\'s
railings. To its left is a trash can tucked into the corner.
You approach it cautiously, memories of last night churning within your mind.</p>]]></item>
        <item>>Continue</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_2_0_1</item>
    </string-array>
    <string-array name="Scenario_1_2_0_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>Still, you do not remember.</p>
<p>&nbsp;</p>
<p>It smells of booze.</p>]]></item>
        <item>[Ignore it]</item>
        <item>[Take a closer look]</item>
        <item>[Return]</item>
        <item>pier</item>
        <item>Scenario_1_0_1</item>
        <item>Scenario_1_2_2</item>
        <item>Scenario_1_2_1</item>
    </string-array>
    <string-array name="Scenario_1_2_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>The bench calls to you, begging you to sit on it. You tear your eyes away and ignore it. There is still work to be done.</p>
<p>&nbsp;</p>
<p>You cannot rest.</p>]]></item>
        <item>[Return]</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_2_0_1</item>
    </string-array>
    <string-array name="Scenario_1_2_2">
        <item><![CDATA[<p>&nbsp;</p>
<p>You take a closer look at the bench. It is old and worn. Rust eats away at the metal, and graffiti settles between the grain. You can make out a few words carved into the surface.</p>
<p>&nbsp;</p>
<p>\"Wala na tay kinaugmaon.\"</p>]]></item>
        <item>>Continue</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_2_2_0_1</item>
    </string-array>
    <string-array name="Scenario_1_2_2_0_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>You look at the desolation around you.</p>]]></item>
        <item>[Agree]</item>
        <item>[Disagree]</item>
        <item>""</item>
        <item>pier</item>
        <item>Scenario_1_2_2_2</item>
        <item>Scenario_1_2_2_1</item>
    </string-array>
    <string-array name="Scenario_1_2_2_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>\"They\'re right. The world has left you for dead.\"</p>]]></item>
        <item>>Continue</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_2_2_0</item>
    </string-array>
    <string-array name="Scenario_1_2_2_2">
        <item><![CDATA[<p>&nbsp;</p>
<p>Even at the end of the world, there is still hope. She has not given up on you yet.</p>
<p>&nbsp;</p>
<p>You are still alive.</p>]]></item>
        <item>>Continue</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_2_2_0</item>
    </string-array>
    <string-array name="Scenario_1_2_2_0">
        <item><![CDATA[<p>&nbsp;</p>
<p>The trashcan is filled with bottles and discarded cigarettes.&nbsp;The air smells of mint and smoke.</p>
<p>&nbsp;</p>
<p>Your ring is not here.</p>]]></item>
        <item>[Return]</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_2_0_1</item>
    </string-array>
    <string-array name="Scenario_1_3">
        <item><![CDATA[<p>&nbsp;</p>
<p>You search the floor. The wood is wet and creaks underneath your muddy boots. Between the cracks you see waves crash against the rocks beneath. Falling here would surely result in death.</p>
<p>&nbsp;</p>
<p>You shiver.</p>]]></item>
        <item>>Continue</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_3_0_1</item>
    </string-array>
    <string-array name="Scenario_1_3_0_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>Your ring is not here; and even if it was, it would\'ve long been taken by the waves.</p>
<p>&nbsp;</p>
<p>You can not give up so soon.</p>]]></item>
        <item>[Return]</item>
        <item>mc</item>
        <item>pier</item>
        <item>Scenario_1_0_1</item>
    </string-array>
    <string-array name="Scenario_1_4">
        <item><![CDATA[<p>&nbsp;</p>
<p>Before you even open your mouth, the man raises his head.
He does not speak, merely nods in greeting. His beard is
white with age, and his skin has seen better days.</p>]]></item>
        <item>>Continue</item>
        <item>\?????</item>
        <item>jonah</item>
        <item>pier</item>
        <item>Scenario_1_4_0_1</item>
    </string-array>
    <string-array name="Scenario_1_4_0_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>Jonah. His name is Jonah.</p>]]></item>
        <item>[\"Good morning Jonah.\"]</item>
        <item>[\"Did you see me last night?\"]</item>
        <item>[\"Have you seen my ring?\"]</item>
        <item>[Return]</item>
        <item>pier</item>
        <item>Scenario_1_0_1</item>
        <item>Scenario_1_4_3</item>
        <item>Scenario_1_4_2</item>
        <item>Scenario_1_4_1</item>
    </string-array>
    <string-array name="Scenario_1_4_1">
        <item><![CDATA[<p>&nbsp;</p>
<p>\"Good morning.\" he replies, voice like gravel. He tries to smile but fails.&nbsp;</p>]]></item>
        <item>[\"Slow day?\"]</item>
        <item>Jonah</item>
        <item>jonah</item>
        <item>pier</item>
        <item>Scenario_1_4_1_0_1</item>
    </string-array>
</resources>